--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pytesseract
-Pillow
-gradio
-transformers
-torch
+streamlit==1.12.0
+pytesseract==0.3.13
+gradio==4.44.0
+torch==2.3.1+cpu
+transformers==4.41.2
+Pillow==8.4.0
